--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-22  Niklas M <scizzo@gimp.org>
 
+	* admin/gimp-web-urls: Fixed one more link that I forgot at the last
+	commit.
+
+2004-03-22  Niklas M <scizzo@gimp.org>
+
 	* admin/gimp-web-urls: Fixed two links that was bogus in the list for
 	the splash screens.
 
