--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/stable.htrw: added info about 2.0 splash
+
 	* admin/gimp-web-urls: fixed wgo:image-about-splash-stable-1.2, it
 	had src and href exchanged.
 
