--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
+	* about/splash/index.htrw: commented out some stuff. Let's
+	concentrate on the important galleries first and don't show the
+	broken ones.
+
+	* about/splash/splash-images/gimp_splashpng.1.*.png: added splash
+	images from 1.3 series that appeared in release tarballs.
+
+	* about/splash/splash-images/splash-1.3.htrw: added cvs info for
+	1.3 splashes. Need to add thumbnails still...
+
+	* admin/gimp-web-urls: link to gimp_splashpng.1.19.png, the 2.0
+	splash screen.
+
 2004-03-22  Niklas M <scizzo@gimp.org>
 
 	* about/splash/stable.htrw: Reverted it back to use the old style. The
