--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/splash-images/splash-1.3.htrw: fixed table mess
+	from my last commit.
+
 	* admin/gimp-web-urls: more links with src and href exchanged.
 
 2004-03-22  Sven Neumann  <sven@gimp.org>
