--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/splash-images/splash-1.3.htrw: one more fix
+
+	* about/splash/splash-images/gimp_splashpng.1.6*.png: the 1.3.12
+	splash screen.
+
+	* about/splash/splash-images/gimp_splash.1.4.png: flattened.
+
+	* about/splash/splash-images/gimp1_1_splash-1.8-t.png
+	* about/splash/splash-images/gimp1_1_splash-1.9-t.png
+	* about/splash/splash-images/gimp_splash.1.7-t.png
+	* about/splash/splash-images/gimp_splashpng.1.2-t.png: converted to
+	indexed colors.
+
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
 	* about/splash/splash-images/splash-1.3.htrw: fixed table mess
 	from my last commit.
 
