another small glitch fixed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
-	* about/splash/splash-images/splash-1.3.htrw: one more fix
+	* about/splash/splash-images/splash-1.3.htrw: two more fixes
 
 	* about/splash/splash-images/gimp_splashpng.1.6*.png: the 1.3.12
 	splash screen.
