--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/stable.htrw: 
+	* about/splash/splash-images/splash-1.1.htrw
+	* about/splash/splash-images/splash-1.3.htrw: slightly more verbose.
+
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
 	* about/splash/splash-images/splash-1.3.htrw: two more fixes
 
 	* about/splash/splash-images/gimp_splashpng.1.6*.png: the 1.3.12
