--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
 2004-03-22  Henrik Brix Andersen  <brix@gimp.org>
 
-	* macintosh/index.htrw: added a link to
-	http://gimp-app.sourceforge.net/
+	* mail_lists.htrw: use h1 for the main title, commented out
+	references to the OS/2 mailing list
 
 	* includes/wgo-page-init.xhtml: removed reference to OS/2 pages as
 	there is no OS/2 support for GIMP 2.0.
+
+	Links to OS/2 specific information should be removed/commented out
+	from the entire site.
+
+	* macintosh/index.htrw: added a link to
+	http://gimp-app.sourceforge.net/
 
 2004-03-22  Raphaël Quinet  <quinet@gamers.org>
 
