--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
+	* downloads/INSTALL: updated with current version.
+
 	* downloads/index.htrw: removed link to version 2.1 and put a
 	note instead that there's no such release yet.
 
