--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Sven Neumann  <sven@gimp.org>
+
+	* unix/fonts.htrw: completely rewritten. Please review and fix
+	errors!
+
 2004-03-23  Henrik Brix Andersen  <brix@gimp.org>
 
 	* images/news-icons/Wilber_icon_Kit.xcf
