--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Michael Natterer  <mitch@gimp.org>
+
+	* develop/index.htrw: fixed description of README.i18n
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* about/introduction.htrw: link to the windows and macintosh pages
