--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Sven Neumann  <sven@gimp.org>
+
+	* unix/gimprc
+	* unix/gtkrc: updated with files from GIMP 2.0.
+
 2004-03-23  Henrik Brix Andersen  <brix@gimp.org>
 
 	* images/news-icons/gimp_code.png
