--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Michael Natterer  <mitch@gimp.org>
+
+	* unix/index.htrw: updated "Requirements" section to reflect
+	the new state of "stable" and "development".
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* unix/gimprc
