--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Sven Neumann  <sven@gimp.org>
+
+	* source/howtos/stable-cvs-get.htrw: fixed broken link.
+
 2004-03-23  Michael Natterer  <mitch@gimp.org>
 
 	* unix/index.htrw: updated "Requirements" section to reflect
