--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Niklas M <scizzo@gimp.org>
+
+	* source/index.htrw: Made a new source page to contain as much
+	information as possible. This one needs editing with links and styles.
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* source/howtos/stable-cvs-get.htrw: fixed broken link.
