--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Michael Natterer  <mitch@gimp.org>
+
+	* about/introduction.htrw: removed accidentially committed "2"
+	from the top of the file.
+
 2004-03-23  Niklas M <scizzo@gimp.org>
 
 	* downloads/install_help.htrw: Some tag updates.
