Fixed download link for stable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Niklas M <scizzo@gimp.org>
+
+	* downloads/index.htrw: Fixed download link for stable.
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* images/news-icons/gimp_code.png: replaced with a copy of
