--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+2004-03-23  Shawn T. Amundson <amundson@gimp.org>
+
+	* Website went live here... cvs tag GIMP_WEB_2_0_0
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: threw out some outdated stuff and put a link to
