--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-03-24  Sven Neumann  <sven@gimp.org>
+
+	* about/introduction.htrw: brag with some new features.
 
 2004-03-23  Shawn T. Amundson <amundson@gimp.org>
 
