--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-26  Sven Neumann  <sven@gimp.org>
+
+	* source/index.htrw: s/unstable/development/
+
 2004-03-25  Sven Neumann  <sven@gimp.org>
 
 	* unix/fonts.htrw: removed "for UNIX" from the title.
